--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,157 @@ code {
     monospace;
 }
 
+h1 {
+  color: #777777;
+}
+
+.titleStrong {
+  color: #524f4e;
+}
+
 .completedItem {
   text-decoration: line-through;
+}
+
+.logoTodo {
+
+}
+
+.formCategories {
+  margin: 30px 0 0 0;
+  padding: 0;
+}
+
+.selectCategory {
+  font-family: 'Lato', Calibri, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  text-shadow: 0 1px 0 rgba(255,255,255,0.8);
+
+  width: 250px;
+  padding: 5px 5px 5px 5px;
+
+  border: none;
+  border-radius: 5px;
+  box-shadow:
+          inset 0 0 5px rgba(0,0,0,0.1),
+          inset 0 3px 2px rgba(0,0,0,0.1);
+  background: #f9f9f9;
+  color: #777;
+  transition: color 0.3s ease-out;
+}
+
+.inputTodo {
+  font-family: 'Lato', Calibri, Arial, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  text-shadow: 0 1px 0 rgba(255,255,255,0.8);
+
+  width: 180px;
+  padding: 5px 10px 5px 35px;
+
+  border: none;
+  border-radius: 2px;
+  box-shadow:
+          inset 0 0 5px rgba(0,0,0,0.1),
+          inset 0 3px 2px rgba(0,0,0,0.1);
+  background: #f9f9f9;
+  color: #777;
+  transition: color 0.3s ease-out;
+}
+
+.inputTodo:hover {
+  color: #52cfeb;
+}
+
+.inputTodo:focus {
+  color: #42A2BC;
+  border: none;
+}
+
+.iconInputTodo {
+  left: 14px;
+  top: 8px;
+  position: absolute;
+  height: 26px;
+  width: 25px;
+
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 0 0 rgba(255, 255, 255, 0.7);
+
+  color: #777777;
+  //background-color: red;
+  text-align: center;
+  line-height: 42px;
+  transition: all 0.3s ease-out;
+  pointer-events: none;
+}
+
+.formAddTodo {
+  width: 300px;
+  margin: 20px auto 30px;
+  position: relative;
+
+  box-shadow:
+          0 0 1px rgba(0, 0, 0, 0.3),
+          0 3px 5px rgba(0, 0, 0, 0.3),
+          inset 0 1px rgba(255,255,255,1),
+          inset 0 -1px 2px rgba(0,0,0,0.25);
+  border-radius: 1px;
+  background: linear-gradient(#eeefef, #ffffff 10%);
+}
+
+.buttonAddTodo {
+  text-decoration: none;
+  outline: none;
+
+  display: inline-block;
+  width: 40px;
+  height: 25px;
+  line-height: 20px;
+
+  margin: 10px 5px;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  text-align: center ;
+  letter-spacing: 0;
+  font-weight: 700;
+
+  border: none;
+  border-radius: 20px;
+  box-shadow:
+          inset 0 0 5px rgba(0,0,0,0.1),
+          inset 0 3px 2px rgba(0,0,0,0.1);
+  background: #3CB371;
+  color: whitesmoke;
+  transition: color 0.3s ease-out;
+}
+
+.buttonAddTodo:hover {
+  background: #2EE59D;
+  box-shadow: 0 15px 20px rgba(46,229,157,.4);
+  color: #524f4e;
+  transform: translateY(-2px);
+}
+
+.listUl {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.listLi {
+  display: flex;
+  justify-content: space-between;
+
+  position: center;
+
+  align-items: center;
+  padding: .2rem 1rem;
+  margin: 0 15px .5rem 15px;
+
+  border: 1px solid #ccc;
+  border-radius: 2px;
 }
