--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  //background: url(image/plain_background.jpg) no-repeat;
+  //background-size: 100%;
+
 }
 
 code {
@@ -14,10 +18,12 @@ code {
 
 h1 {
   color: #777777;
+  margin: 0;
 }
 
 .titleStrong {
   color: #524f4e;
+  margin-top: 20px;
 }
 
 .completedItem {
@@ -25,7 +31,10 @@ h1 {
 }
 
 .logoTodo {
+  height: 5%;
+  width: 5%;
 
+  margin: 20px 0 0 0;
 }
 
 .formCategories {
@@ -82,9 +91,9 @@ h1 {
 
 .iconInputTodo {
   left: 14px;
-  top: 8px;
+  top: 10px;
   position: absolute;
-  height: 26px;
+  height: 25px;
   width: 25px;
 
   border-right: 1px solid rgba(0, 0, 0, 0.1);
@@ -165,4 +174,9 @@ h1 {
 
   border: 1px solid #ccc;
   border-radius: 2px;
+}
+
+.checkboxLi {
+  margin-right: 1rem;
+  border-radius: 5px;
 }
