--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,11 @@ h1 {
   transition: color 0.3s ease-out;
 }
 
+.selectCategory:focus {
+  outline: none;
+
+}
+
 .inputTodo {
   font-family: 'Lato', Calibri, Arial, sans-serif;
   font-size: 13px;
@@ -85,6 +90,7 @@ h1 {
 }
 
 .inputTodo:focus {
+  outline: none;
   color: #42A2BC;
   border: none;
 }
@@ -186,19 +192,29 @@ h1 {
   border-radius: 5px;
 }
 
-.buttonComment {
+.buttonCommentOut {
   border: none;
   background-color: unset;
-  color: green;
+  color: red;
   font-size: 13px;
 }
 
-.buttonComment:hover {
+.buttonCommentOut:hover {
   color: dodgerblue;
 }
 
-.buttonComment:focus {
+.buttonCommentOut:focus {
   outline: none;
   transition: All 0.5s ease;
+  color: dodgerblue;
+}
+
+.buttonComment {
+  color: green;
+  border: none;
+  background-color: unset;
+}
+
+.buttonComment:hover {
   color: dodgerblue;
 }
