--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,15 @@ h1 {
   margin-top: 20px;
 }
 
-.completedItem {
+.completed-item {
   text-decoration: line-through;
   color: #f50057;
+}
+
+.todo-item {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
 }
 
 .logoTodo {
