--- a/src/index.css
+++ b/src/index.css
@@ -227,6 +227,12 @@ h1 {
 }
 
 .textAreaComment {
+  font-size: 1rem;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+  color: rgba(0, 0, 0, 0.54);
   width: 90%;
   margin-bottom: 10px;
   border: none;
