--- a/src/index.css
+++ b/src/index.css
@@ -30,17 +30,6 @@ h1 {
   margin-top: 20px;
 }
 
-.completed-item {
-  text-decoration: line-through;
-  color: #f50057;
-}
-
-.todo-item {
-  display: flex;
-  justify-content: space-between;
-  flex: 1;
-}
-
 .logoTodo {
   margin: 20px 0 0 0;
 }
@@ -88,7 +77,7 @@ h1 {
   font-weight: 400;
   text-shadow: 0 1px 0 rgba(255,255,255,0.8);
 
-  width: 180px;
+  width: 260px;
   padding: 5px 10px 5px 35px;
 
   border: none;
@@ -129,7 +118,7 @@ h1 {
 }
 
 .formAddTodo {
-  width: 300px;
+  width: 380px;
   margin: 20px auto 30px;
   position: relative;
 
@@ -199,31 +188,8 @@ h1 {
   border-radius: 5px;
 }
 
-.buttonCommentOut {
-  border: none;
-  background-color: unset;
+.button-out {
   color: red;
-  font-size: 13px;
-}
-
-.buttonCommentOut:hover {
-  color: dodgerblue;
-}
-
-.buttonCommentOut:focus {
-  outline: none;
-  transition: All 0.5s ease;
-  color: dodgerblue;
-}
-
-.buttonComment {
-  color: green;
-  border: none;
-  background-color: unset;
-}
-
-.buttonComment:hover {
-  color: dodgerblue;
 }
 
 .textAreaComment {
@@ -236,4 +202,10 @@ h1 {
   width: 90%;
   margin-bottom: 10px;
   border: none;
+  resize: none;
 }
+
+.textAreaComment:focus {
+  outline: none;
+}
+
